[gd_scene load_steps=4 format=3 uid="uid://c4ibdhlqeds3w"]

[ext_resource type="Script" path="res://scenes/player/level.gd" id="1_73gaf"]
[ext_resource type="Texture2D" uid="uid://cpnenw1g0v8ur" path="res://graphics/player/player.png" id="1_af2rx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6nqbp"]
radius = 62.1289

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_73gaf")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(-1, -38)
texture = ExtResource("1_af2rx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6nqbp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(18, -141)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(10, -135)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPosition"]
position = Vector2(26, -135)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
